[package]
name = "sword-framework-doc-compile-tests"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true

[features]
default = []

[dependencies]
sword-proto-parser = {path = "../packages/parser", version = "0.1.0"}
